# uvvm_co-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  run.py
.github/workflows/: pipeline.yml
cmake/: coverage.cmake
examples/axistream_uart/: README.md
examples/axistream_uart/run/: .gitignore
examples/axistream_uart/scripts/: run.py  uart_cosim_test.py
examples/axistream_uart/src/tb/: axistream_uart_uvvm_tb.vhd  axistream_uart_uvvm_th.vhd
src/cpp/: byte_queue.hpp  packet_queue.hpp  shared_map.hpp  uvvm_cosim_client.hpp  uvvm_cosim_client_example.cpp  uvvm_cosim_common.cpp  uvvm_cosim_common.hpp  uvvm_cosim_data.cpp  uvvm_cosim_data.hpp  uvvm_cosim_foreign_fli.cpp  uvvm_cosim_foreign_vhpi.cpp  uvvm_cosim_server.cpp  uvvm_cosim_server.hpp  uvvm_cosim_types.hpp  uvvm_cosim_vhpi.cpp  uvvm_cosim_vhpi_utils.hpp
src/python/: example_client_requests-lib.py  example_client_tinyrpc-lib.py
src/vhdl/: uvvm_cosim.vhd  uvvm_cosim_axis_vvc_ctrl.vhd  uvvm_cosim_foreign_pkg_body.vhd  uvvm_cosim_foreign_pkg_fli.vhd  uvvm_cosim_foreign_pkg_vhpi.vhd  uvvm_cosim_uart_vvc_ctrl.vhd  vhpi_cosim_methods_pkg.vhd
test/: cosim_testbench.vhd  vhpi_testbench.vhd
test/cpp/: CMakeLists.txt  test_byte_queue.cpp  test_packet_queue.cpp  test_uvvm_cosim_data.cpp  test_uvvm_cosim_types.cpp
